  if no requiredType is specified the type assert is simply not performed.
* Fixed bug in Flow.end where outputMapper source and target arguments were backwards.

Package org.springframework.webflow.builder
* Fixed bug related to inline-flow parsing where inline flow artifacts were not assembled properly.
* Added not null asserts to setters allowing overriding of required flow builder services.
* Improved dtd documentation describing input-mapper and output-mapper usage.
* Relaxed 'isMultiAction' assert in XmlFlowBuilder to simply 'isAction', allowing provision of the 'method'
  annotated action attribute with any target Action implementation, not just MultiActions.
* Removed 'isMultiAction' tester on FlowServiceLocator as it is no longer needed by the builders.

Package org.springframework.webflow.action
* Moved MultiAction.METHOD_ATTRIBUTE constant to AnnotatedAction.METHOD_ATTRIBUTE.
  
Package org.springframework.webflow.execution
* Fixed bug in FlowExecutionImpl toString, where a NPE could be thrown if toString was called during 
  a FlowExecution.start (after becoming active but before having the current state set).
* Added various not null asserts to setters allowing overriding of required flow execution repository services.
* Changed ContinuationFlowExecutionRepositoryCreator's default 'maxContinuations' property to 0, setting 
  no upper bound on the number of continuations that can exist per conversation by default.

Package org.springframework.webflow.executor
* Refined support for context-relative external redirects; now by default external URLs that begin with 
  a leading '/' are treated as context-relative.  The FlowExecutorArgumentExtractor.redirectContextRelative
  property allows for overriding this default.
  
Package org.springframework.webflow.registry
* Improved ExternalizedFlowRegistrar, extracting a factory method for creating an ExternalizedFlowDefinition