@@ -1,5 +1,8 @@
 package org.springframework.webflow.executor.support;
 
+import java.util.HashMap;
+import java.util.Map;
+
 import junit.framework.TestCase;
 
 import org.springframework.webflow.FlowExecutionContext;
@@ -85,6 +88,17 @@ public class FlowExecutorArgumentExtractorTests extends TestCase {
 		FlowRedirect flowRedirect = new FlowRedirect("flow", null);
 		String url = argumentExtractor.createFlowUrl(flowRedirect, context);
 		assertEquals("/app/flows.htm?_flowId=flow", url);
+	}
+
+	public void testCreateFlowUrlWithInput() {
+		context.setContextPath("/app");
+		context.setDispatcherPath("/flows.htm");
+		Map input = new HashMap();
+		input.put("foo", "bar");
+		input.put("baz", new Integer(3));
+		FlowRedirect flowRedirect = new FlowRedirect("flow", input);
+		String url = argumentExtractor.createFlowUrl(flowRedirect, context);
+		assertEquals("/app/flows.htm?_flowId=flow&foo=bar&baz=3", url);
 	}
 
 	public void testCreateFlowExecutionUrl() {
